@@ -1,7 +1,9 @@
 MD5 11b2f98a9dbb41f8bf518bb3c6f9f056 mod_gnutls-0.1.0.ebuild 1025
-MD5 c26b462cc72be685d4b3888443cc7936 ChangeLog 510
+MD5 74a7ee3bae74a53298e2ba452aaa9d32 ChangeLog 706
+MD5 b9637aef86ae54619ab7bdeac29397b2 mod_gnutls-0.1.1-r1.ebuild 1035
 MD5 457f9e735a53fc74c78b3798a07ec081 mod_gnutls-0.1.1.ebuild 1025
 MD5 288302f1a17e60b9dc4ad242b6e85fe7 metadata.xml 229
 MD5 fe2df67607875d824bda5d2ef34e59e5 files/digest-mod_gnutls-0.1.1 69
+MD5 fe2df67607875d824bda5d2ef34e59e5 files/digest-mod_gnutls-0.1.1-r1 69
 MD5 668cd19c29432aee3d683536dfd6d917 files/digest-mod_gnutls-0.1.0 69
 MD5 fec34d3eabecf2acfcdc86a8471db4b6 files/47_mod_gnutls.conf 1453
