@@ -1,6 +1,12 @@
 # ChangeLog for www-apache/mod_gnutls
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_gnutls/ChangeLog,v 1.2 2005/04/08 22:51:34 trapni Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_gnutls/ChangeLog,v 1.3 2005/04/09 22:10:53 trapni Exp $
+
+*mod_gnutls-0.1.1-r1 (09 Apr 2005)
+
+  09 Apr 2005; Christian Parpart <trapni@gentoo.org>
+  +mod_gnutls-0.1.1-r1.ebuild:
+  adding missing upstream dhfile and rsafile. a little ebuild code cleanup
 
 *mod_gnutls-0.1.1 (08 Apr 2005)
 
